--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="mcc">MCC</string>
     <string name="todo">TODO</string>
     <string name="metro">Metro</string>
+    <string name="category">choose the category</string>
 </resources>
